data/derived/comb/progs/unify/prog8832.ml.out
Characters 82-97:
  |Sine (e1) -> sin(pi *. exprToString e1)
                          ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
